First release updated

--- a/src/Maklarresurs/AppBundle/Resources/views/Login/login.html.twig
+++ b/src/Maklarresurs/AppBundle/Resources/views/Login/login.html.twig
@@ -65,7 +65,7 @@
         <div class="spbox3" style="margin: 0 auto; width: 30%; height: auto; background: #ffffff; border: 1px solid #cccccc; border-radius: 5px; padding: 15px;">
             <div class="header_login">
                 <img style="margin-bottom: -17px;" src="http://www.maklarresurs.nu/wp-content/themes/Karma/images/_global/custom-logo-2.png" alt="Mäklarresurs AB">
-                <span class="logo-text">Mäklarresurs LOGIN</span>
+                <span class="logo-text">Mäklarresurs</span>
             </div>
 
             <form action="{{ path("_login_check") }}" method="post">
