--- a/src/Maklarresurs/UserBundle/Resources/views/Dashboard/index.html.twig
+++ b/src/Maklarresurs/UserBundle/Resources/views/Dashboard/index.html.twig
@@ -10,54 +10,54 @@
         <div class="row-fluid" style="margin-bottom: 20px">
             <a href="{{ path('sample_order') }}" class="btn btn-blue quick-btn span2">
                 <i class="icon-edit"></i>
-                <span class="quick-btn-title">Skapa <br> lappning</span>
+                <span class="quick-btn-title">Skapa <br> Lappning</span>
             </a>
             <a href="#" class="btn btn-cyan quick-btn span2">
                 <i class="icon-table"></i>
-                <span class="quick-btn-title">Utsikt <br> lappning</span>
+                <span class="quick-btn-title">översikt <br> Lappning</span>
             </a>
             <a href="#" class="btn btn-blue quick-btn span2">
                 <i class="icon-edit"></i>
-                <span class="quick-btn-title">Skapa Boka visningsvärd</span>
+                <span class="quick-btn-title">Boka Visningsvärd</span>
             </a>
             <a href="#" class="btn btn-cyan quick-btn span2">
                 <i class="icon-table"></i>
-                <span class="quick-btn-title">Utsikt Boka visningsvärd</span>
+                <span class="quick-btn-title">översikt Boka visningsvärd</span>
             </a>
             <a href="#" class="btn btn-blue quick-btn span2">
                 <i class="icon-edit"></i>
-                <span class="quick-btn-title">Skapa <br> Employees</span>
+                <span class="quick-btn-title">Skapa <br> Användare</span>
             </a>
             <a href="#" class="btn btn-cyan quick-btn span2">
                 <i class="icon-table"></i>
-                <span class="quick-btn-title">Utsikt <br> Employees </span>
+                <span class="quick-btn-title">översikt <br> Employees </span>
             </a>
 
         </div>
 
     </div>
-    <h3 class="box-header">SETTINGS</h3>
+    <h3 class="box-header">inställningar</h3>
     <div class="box">
         <div class="row-fluid" style="margin-bottom: 20px">
             <a href="#" class="btn  quick-btn span2">
                 <i class="icon-user"></i>
-                <span class="quick-btn-title">VIEW <br> PROFILE </span>
+                <span class="quick-btn-title">VISA <br> PROFIL </span>
             </a>
             <a href="#" class="btn btn-green quick-btn span2">
                 <i class="icon-wrench"></i>
-                <span class="quick-btn-title">EDIT <br> PROFILE </span>
+                <span class="quick-btn-title">EDITERA <br> PROFIL </span>
             </a>
             <a href="#" class="btn btn-orange quick-btn span2">
                 <i class="icon-key"></i>
-                <span class="quick-btn-title">CHANGE <br> PASSWORD</span>
+                <span class="quick-btn-title">Byt <br> lösenord</span>
             </a>
             <a href="#" class="btn btn-orange quick-btn span2">
                 <i class="icon-picture"></i>
-                <span class="quick-btn-title">CHANGE <br> PHOTO</span>
+                <span class="quick-btn-title">Uppdatera <br> profilbild</span>
             </a>
             <a href="#" class="btn btn-red quick-btn span2">
                 <i class="icon-lock"></i>
-                <span class="quick-btn-title">LOGOUT <br> &nbsp;</span>
+                <span class="quick-btn-title">logga ut <br> &nbsp;</span>
             </a>
 
 
