--- a/src/Maklarresurs/UserBundle/Resources/views/layout.html.twig
+++ b/src/Maklarresurs/UserBundle/Resources/views/layout.html.twig
@@ -92,13 +92,13 @@
                 <a href="#" class="lp-dropdown-toggle" id="lappning-dropdown"><span class="icon-reorder"></span>Lappning</a>
             </li>
             <li class="lp-dropdown">
-                <a href="#" class="lp-dropdown-toggle" id="boka-dropdown"><span class="icon-reorder"></span>Boka Visningsvard</a>
+                <a href="#" class="lp-dropdown-toggle" id="boka-dropdown"><span class="icon-reorder"></span>Boka Visningsvärd</a>
             </li>
             <li>
-                <a href="#"><span class="icon-user-md"></span>Employees</a>
+                <a href="#"><span class="icon-user-md"></span>användare</a>
             </li>
             <li>
-                <a href="#"><span class="icon-envelope"></span>Contact</a>
+                <a href="#"><span class="icon-envelope"></span>Kontakt</a>
             </li>
         </ul>
     </div>
@@ -141,7 +141,7 @@
                 <a tabindex="-1" href="{{ path('sample_order') }}"><span class="icon-edit"></span>Skapa</a>
             </li>
             <li>
-                <a tabindex="-1" href="#"><span class="icon-table"></span>Utsikt</a>
+                <a tabindex="-1" href="#"><span class="icon-table"></span>översikt</a>
             </li>
         </ul>
     </div>
@@ -152,7 +152,7 @@
                 <a tabindex="-1" href="#"><span class="icon-edit"></span>Skapa</a>
             </li>
             <li>
-                <a tabindex="-1" href="#"><span class="icon-table"></span>Utsikt</a>
+                <a tabindex="-1" href="#"><span class="icon-table"></span>översikt</a>
             </li>
         </ul>
     </div>
