--- a/src/Maklarresurs/UserBundle/Resources/views/Dashboard/index.html.twig
+++ b/src/Maklarresurs/UserBundle/Resources/views/Dashboard/index.html.twig
@@ -12,13 +12,13 @@
                 <i class="icon-edit"></i>
                 <span class="quick-btn-title">Skapa <br> Lappning</span>
             </a>
-            <a href="#" class="btn btn-cyan quick-btn span2">
+            <a href="{{ path('user_sample_order_view') }}" class="btn btn-cyan quick-btn span2">
                 <i class="icon-table"></i>
                 <span class="quick-btn-title">översikt <br> Lappning</span>
             </a>
             <a href="#" class="btn btn-blue quick-btn span2">
                 <i class="icon-edit"></i>
-                <span class="quick-btn-title">Boka Visningsvärd</span>
+                <span class="quick-btn-title">Boka <br> Visningsvärd</span>
             </a>
             <a href="#" class="btn btn-cyan quick-btn span2">
                 <i class="icon-table"></i>
@@ -55,7 +55,7 @@
                 <i class="icon-picture"></i>
                 <span class="quick-btn-title">Uppdatera <br> profilbild</span>
             </a>
-            <a href="#" class="btn btn-red quick-btn span2">
+            <a href="/logout" class="btn btn-red quick-btn span2">
                 <i class="icon-lock"></i>
                 <span class="quick-btn-title">logga ut <br> &nbsp;</span>
             </a>
