--- a/src/Maklarresurs/AdminBundle/Resources/views/Dashboard/index.html.twig
+++ b/src/Maklarresurs/AdminBundle/Resources/views/Dashboard/index.html.twig
@@ -1,41 +1,67 @@
 {% extends 'MaklarresursAdminBundle::layout.html.twig' %}
-{% set pageClass = 'customer' %}
 
 {% block title %}Dashboard{% endblock %}
 
-{% block stylesheets %}
-    <link rel="stylesheet" href="{{ asset('bundles/maklarresursadmin/css/bootstrap.min.css') }}" />
-    <link rel="stylesheet" href="{{ asset('bundles/maklarresursadmin/css/font-awesome.css') }}" />
-    <link rel="stylesheet" href="{{ asset('bundles/maklarresursadmin/css/jquery-ui.css') }}" />
-    <link rel="stylesheet" href="{{ asset('bundles/maklarresursadmin/css/icheck/flat/blue.css') }}" />
-    <link rel="stylesheet" href="{{ asset('bundles/maklarresursadmin/css/select2.css') }}" />
-    <link rel="stylesheet" href="{{ asset('bundles/maklarresursadmin/css/unicorn.css') }}" />
-    <link rel="stylesheet" href="{{ asset('bundles/maklarresursadmin/css/unicorn.blue.css') }}" class="skin-color" />
-
-{% endblock %}
 
 
 {% block body %}
-    <div id="content">
-        <div id="content-header">
-            <h1>Dashboard</h1>
+    <h3 class="box-header">DASHBOARD</h3>
+    <div class="box">
+        <div class="row-fluid" style="margin-bottom: 20px">
+            <a href="{{ path('admin_user_create') }}" class="btn btn-blue quick-btn span2">
+                <i class="icon-edit"></i>
+                <span class="quick-btn-title">Create <br> User</span>
+            </a>
+            <a href="{{ path('admin_user') }}" class="btn btn-cyan quick-btn span2">
+                <i class="icon-table"></i>
+                <span class="quick-btn-title">View <br> Users</span>
+            </a>
+            <a href="{{ path('sample_order') }}" class="btn btn-blue quick-btn span2">
+                <i class="icon-edit"></i>
+                <span class="quick-btn-title">Create <br> Address</span>
+            </a>
+            <a href="#" class="btn btn-cyan quick-btn span2">
+                <i class="icon-table"></i>
+                <span class="quick-btn-title">View <br> Address</span>
+            </a>
+            <a href="{{ path('admin_orders_lappning') }}" class="btn btn-blue quick-btn span2">
+                <i class="icon-edit"></i>
+                <span class="quick-btn-title">Lappning <br> &nbsp;</span>
+            </a>
+            <a href="{{ path('admin_orders_boka') }}" class="btn btn-cyan quick-btn span2">
+                <i class="icon-table"></i>
+                <span class="quick-btn-title">Boka <br> visningsvärd</span>
+            </a>
         </div>
 
     </div>
-{% endblock %}
+    <h3 class="box-header">inställningar</h3>
+    <div class="box">
+        <div class="row-fluid" style="margin-bottom: 20px">
+            <a href="#" class="btn  quick-btn span2">
+                <i class="icon-user"></i>
+                <span class="quick-btn-title">VISA <br> PROFIL </span>
+            </a>
+            <a href="#" class="btn btn-green quick-btn span2">
+                <i class="icon-wrench"></i>
+                <span class="quick-btn-title">EDITERA <br> PROFIL </span>
+            </a>
+            <a href="#" class="btn btn-orange quick-btn span2">
+                <i class="icon-key"></i>
+                <span class="quick-btn-title">Byt <br> lösenord</span>
+            </a>
+            <a href="#" class="btn btn-orange quick-btn span2">
+                <i class="icon-picture"></i>
+                <span class="quick-btn-title">Uppdatera <br> profilbild</span>
+            </a>
+            <a href="{{ path('fos_user_security_logout') }}" class="btn btn-red quick-btn span2">
+                <i class="icon-lock"></i>
+                <span class="quick-btn-title">logga ut <br> &nbsp;</span>
+            </a>
 
-{% block javascripts %}
-    <!-- ***************** - JavaScript Starts Here - ***************** -->
-    <script src="{{ asset('bundles/maklarresursadmin/js/jquery.min.js') }}"></script>
-    <script src="{{ asset('bundles/maklarresursadmin/js/jquery-ui.custom.js') }}"></script>
-    <script src="{{ asset('bundles/maklarresursadmin/js/bootstrap.min.js') }}"></script>
-    <script src="{{ asset('bundles/maklarresursadmin/js/jquery.icheck.min.js') }}"></script>
-    <script src="{{ asset('bundles/maklarresursadmin/js/select2.min.js') }}"></script>
-    <script src="{{ asset('bundles/maklarresursadmin/js/jquery.dataTables.min.js') }}"></script>
-    <script src="{{ asset('bundles/maklarresursadmin/js/jquery.jpanelmenu.min.js') }}"></script>
-    <script src="{{ asset('bundles/maklarresursadmin/js/jquery.nicescroll.min.js') }}"></script>
-    <script src="{{ asset('bundles/maklarresursadmin/js/unicorn.js') }}"></script>
-    <script src="{{ asset('bundles/maklarresursadmin/js/unicorn.tables.js') }}"></script>
 
+        </div>
+
+    </div>
 
 {% endblock %}
