--- a/src/Maklarresurs/AdminBundle/Resources/views/layout.html.twig
+++ b/src/Maklarresurs/AdminBundle/Resources/views/layout.html.twig
@@ -1,74 +1,179 @@
 <!DOCTYPE html>
-<html lang="en-US">
-<head>
-    <title>Maklarresurs Admin</title>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<!--[if lt IE 7]><html class="no-js lt-ie9 lt-ie8 lt-ie7"><![endif]-->
+<!--[if IE 7]><html class="no-js lt-ie9 lt-ie8"><![endif]-->
+<!--[if IE 8]><html class="no-js lt-ie9"><![endif]-->
+<!--[if gt IE 8]><!-->
+<html style="" class=" js flexbox canvas canvastext webgl no-touch geolocation postmessage no-websqldatabase indexeddb hashchange history draganddrop websockets rgba hsla multiplebgs backgroundsize borderimage borderradius boxshadow textshadow opacity cssanimations csscolumns cssgradients no-cssreflections csstransforms csstransforms3d csstransitions fontface generatedcontent video audio localstorage sessionstorage webworkers applicationcache svg inlinesvg smil svgclippaths"><!--<![endif]--><head>
+    <meta http-equiv="content-type" content="text/html; charset=UTF-8">
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <title>
+        Mäklarresurs AB
+    </title>
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width">
 
-    {% block stylesheets %}{% endblock %}
+    <script src="{{ asset('bundles/maklarresursadmin/js/adminflare-demo-init.js') }}" type="text/javascript"></script>
 
-</head>
+    <link href="{{ asset('bundles/maklarresursadmin/css/css.css') }}" rel="stylesheet" type="text/css">
+    <link href="{{ asset('bundles/maklarresursadmin/css/bootstrap.css') }}" media="all" rel="stylesheet" type="text/css" id="bootstrap-css">
+    <link href="{{ asset('bundles/maklarresursadmin/css/adminflare.css') }}" media="all" rel="stylesheet" type="text/css" id="adminflare-css">
 
-<body>
-    <div id="header">
-        <h1><a href="#">Maklarresurs Admin</a></h1>
-        <a id="menu-trigger" href="#"><i class="icon-align-justify"></i></a>
-    </div>
+    <script src="{{ asset('bundles/maklarresursadmin/js/modernizr-jquery.js') }}" type="text/javascript"></script>
+    <script src="{{ asset('bundles/maklarresursadmin/js/adminflare-demo.js') }}" type="text/javascript"></script>
+    <script src="{{ asset('bundles/maklarresursadmin/js/bootstrap.js') }}" type="text/javascript"></script>
+    <script src="{{ asset('bundles/maklarresursadmin/js/adminflare.js') }}" type="text/javascript"></script>
 
-    <div id="user-nav">
-        <ul class="btn-group">
-            <li class="btn"><a title="" href="#"><i class="icon-cog"></i> <span class="text">Settings</span></a></li>
-            <li class="btn"><a title="" href=""><i class="icon-share-alt"></i> <span class="text">Logout</span></a></li>
-        </ul>
-    </div>
+    <script src="http://adminflare-130.herokuapp.com/assets/javascripts/1.3.0/fuelux-datagrid-example.min.js" type="text/javascript"></script>
 
-    <div id="sidebar">
-        <ul>
-            <li class="active"><a href="#"><i class="icon-home"></i> <span>Dashboard</span></a></li>
-            <li class="submenu">
-                <a href="#"><i class="icon-beaker"></i> <span>Address Management</span> <i class="arrow icon-chevron-right"></i></a>
-                <ul>
-                    <li><a href="{{ path('address') }}">View addresses</a></li>
-                    <li><a href="{{ path('address_new') }}">Create Address</a></li>
+    <style type="text/css">
+        #theme_switcher {
+            display: none;
+        }
+
+        #main-navbar .navbar-inner {
+            background: #d85837;
+            border-bottom: 1px solid #8d331c;
+            -webkit-box-shadow: rgba(255,255,255,0.25) 0 1px 0 inset;
+            -moz-box-shadow: rgba(255,255,255,0.25) 0 1px 0 inset;
+            box-shadow: rgba(255,255,255,0.25) 0 1px 0 inset;
+            background-color: #df6b3e;
+            background-image: -moz-linear-gradient(top,#e37742,#d85837);
+            background-image: -webkit-gradient(linear,0 0,0 100%,from(#e37742),to(#d85837));
+            background-image: -webkit-linear-gradient(top,#e37742,#d85837);
+            background-image: -o-linear-gradient(top,#e37742,#d85837);
+            background-image: linear-gradient(to bottom,#e37742,#d85837);
+            background-repeat: repeat-x;
+            filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffe37742',endColorstr='#ffd85837',GradientType=0);
+        }
+    </style>
+
+
+
+<body class="centered-layout">
+<!-- Main navigation bar
+    ================================================== -->
+<header class="navbar navbar-fixed-top" id="main-navbar">
+    <div class="navbar-inner">
+        <div class="container">
+            <a class="logo" href="#" style="color: #ffffff; font-weight: bold; font-size: 15px;">
+                <img alt="Af_logo" src="http://online.maklarresurs.nu/wp-content/themes/Karma/images/_global/custom-logo-2.png" style="height: 30px">
+                Mäklarresurs AB
+            </a>
+
+            <a class="btn nav-button collapsed" data-toggle="collapse" data-target=".nav-collapse">
+                <span class="icon-reorder"></span>
+            </a>
+
+            <div class="nav-collapse collapse">
+                <form class="navbar-search pull-left" action="" _lpchecked="1">
+                    <input class="search-query" placeholder="Search" style="width: 120px" type="text">
+                </form>
+                <ul class="nav pull-right">
+                    <li class="separator"></li>
+                    <li class="dropdown">
+                        <a href="#" class="dropdown-toggle usermenu" data-toggle="dropdown">
+                            <img alt="Avatar" src="{{ asset('bundles/maklarresursadmin/images/avatar.png') }}">
+                            <span>&nbsp;&nbsp;{{ app.user.firstName }}</span>
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li>
+                                <a href="#">Profile</a>
+                            </li>
+                            <li>
+                                <a href="#">Settings</a>
+                            </li>
+                            <li>
+                                <a href="/logout">Logout</a>
+                            </li>
+                        </ul>
+                    </li>
                 </ul>
-            </li>
-            <li class="submenu">
-                <a href="#"><i class="icon-beaker"></i> <span>Customer</span> <i class="arrow icon-chevron-right"></i></a>
-                <ul>
-                    <li><a href="{{ path('admin_user') }}">View Customers</a></li>
-                    <li><a href="{{ path('admin_user_new') }}">Create Customers</a></li>
-                </ul>
-            </li>
-            <li class="submenu">
-                <a href="#"><i class="icon-beaker"></i> <span>PDF Files</span> <i class="arrow icon-chevron-right"></i></a>
-            </li>
-
-            <li class="submenu">
-                <a href="#"><i class="icon-beaker"></i> <span>Create Order</span> <i class="arrow icon-chevron-right"></i></a>
-            </li>
-            <li class="submenu">
-                <a href="#"><i class="icon-beaker"></i> <span>Invoices</span> <i class="arrow icon-chevron-right"></i></a>
-            </li>
-            <li class="submenu">
-                <a href="#"><i class="icon-beaker"></i> <span>Administrate</span> <i class="arrow icon-chevron-right"></i></a>
-                <ul>
-                    <li><a href="#">View Users</a></li>
-                    <li><a href="#">Create Users</a></li>
-                </ul>
-            </li>
-
-        </ul>
-
-    </div>
-
-    {% block body %}{% endblock %}
-
-    <div class="row">
-        <div id="footer" class="col-xs-12">
-            2014 &copy; Maklarresurs Admin. Developed by <a href="#">Shimul</a>
+            </div>
         </div>
     </div>
+</header>
+<!-- / Main navigation bar -->
 
-{% block javascripts %}{% endblock %}
+<!-- Left navigation panel
+    ================================================== -->
+<nav style="height: 100%; position: fixed; top: 0px; left: 0px;" id="left-panel">
+    <div style="overflow: hidden;" id="left-panel-content">
+        <ul style="transition-property: -moz-transform; transform-origin: 0px 0px 0px; transform: translate(0px, 0px);">
+            <li class="active">
+                <a href="{{ path('admin_dashboard') }}"><span class="icon-dashboard"></span>Dashboard</a>
+            </li>
+            <li class="lp-dropdown">
+                <a href="#" class="lp-dropdown-toggle" id="lappning-dropdown"><span class="icon-reorder"></span>User</a>
+            </li>
+            <li class="lp-dropdown">
+                <a href="#" class="lp-dropdown-toggle" id="boka-dropdown"><span class="icon-reorder"></span>Address</a>
+            </li>
+            <li>
+                <a href="{{ path('admin_orders_lappning') }}"><span class="icon-user-md"></span>Lappnings</a>
+            </li>
+            <li>
+                <a href="{{ path('admin_orders_boka') }}"><span class="icon-user-md"></span>Boka Visningsvard</a>
+            </li>
+
+            <li>
+                <a href="#"><span class="icon-envelope"></span>Kontakt</a>
+            </li>
+        </ul>
+    </div>
+    <div class="icon-caret-down"></div>
+    <div class="icon-caret-up"></div>
+</nav>
+<!-- / Left navigation panel -->
+
+<!-- Page content
+    ================================================== -->
+<section class="container">
+
+    <style>
+        .quick-btn i {
+            /*font-size: 50px;*/
+        }
+        .quick-btn {
+            /*font-size: 17px;*/
+            font-weight: bold;
+        }
+    </style>
+    <section class="row-fluid">
+        {% block body %}{% endblock %}
+    </section>
+
+    <!-- Page footer
+        ================================================== -->
+    <footer id="main-footer">
+        Copyright © 2015 <a href="#">Mäklarresurs AB</a>, all rights reserved.
+    </footer>
+    <!-- / Page footer -->
+</section>
+
+
+
+<div style="left: 92px; width: 246px;" class="lp-dropdown-wrapper" data-dropdown-owner="lappning-dropdown">
+    <div class="arrow"></div>
+    <ul style="width: 246px;" class="lp-dropdown-menu" data-dropdown-owner="lappning-dropdown">
+        <li>
+            <a tabindex="-1" href="{{ path('admin_user_new') }}"><span class="icon-edit"></span>CREATE</a>
+        </li>
+        <li>
+            <a tabindex="-1" href="{{ path('admin_user') }}"><span class="icon-table"></span>LIST</a>
+        </li>
+    </ul>
+</div>
+<div style="left: 92px; width: 246px;" class="lp-dropdown-wrapper" data-dropdown-owner="boka-dropdown">
+    <div class="arrow"></div>
+    <ul style="width: 246px;" class="lp-dropdown-menu" data-dropdown-owner="boka-dropdown">
+        <li>
+            <a tabindex="-1" href="#"><span class="icon-edit"></span>CREATE</a>
+        </li>
+        <li>
+            <a tabindex="-1" href="#"><span class="icon-table"></span>LIST</a>
+        </li>
+    </ul>
+</div>
 </body>
 </html>
